-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
None
-
6.9.1
-
d9cb0ed9c (dev), f6e97ecd3 (6.10), 120681b76 (6.9), bba59b3ae (tqtc/lts-6.8)
-
DaVinci 123, DaVinci 124, DaVinci 125, DaVinci 126
QInputDevice::availableVirtualGeometry is defined as a property with a getter and notifier signal. However, since the property itself is undocumented, the getter is annotated with a note and the (undocumented) signal only appears in the signals section, with a link to a non-existent detailed description.
There should be documentation for the property and the signal, but QDoc also needs to handle this better.
- resulted in
-
QTBUG-140629 Warn about undocumented properties
-
- Open
-
For Gerrit Dashboard: QTBUG-139283 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
669381,4 | Doc: Add missing definition for QInputDevice::availableVirtualGeometry | dev | qt/qtbase | Status: MERGED | +2 | 0 |
670124,2 | Doc: Add missing definition for QInputDevice::availableVirtualGeometry | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
670145,2 | Doc: Add missing definition for QInputDevice::availableVirtualGeometry | 6.9 | qt/qtbase | Status: MERGED | +2 | +1 |
671792,2 | Doc: Add missing definition for QInputDevice::availableVirtualGeometry | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |