Doc: Add missing definition for QInputDevice::availableVirtualGeometry

The getter was documented, but not the notifier. This led to a link to
missing documentation for the signal.

Task-number: QTBUG-139283
Change-Id: I4c85541378614498fbff52df06308f4cc31008ba
Pick-to: 6.8
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit d9cb0ed9c5ca93cab9d3862e6cfd037738ca2f68)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit f6e97ecd3b50807abaf9f99262070104b3533116)