src/gui/kernel/qinputdevice.cpp
@@ -143,16 +143,19 @@ QInputDevice::QInputDevice(QInputDevicePrivate &d, QObject *parent)
 }
 
 /*!
-    Returns the region within the \l{QScreen::availableVirtualGeometry}{virtual desktop}
-    that this device can access.
+    \property QInputDevice::availableVirtualGeometry
+    \brief the region within the virtual desktop that this device can access.
 
-    For example a \l {QInputDevice::DeviceType}{TouchScreen} input
-    device is fixed in place upon a single physical screen, and usually
-    calibrated so that this area is the same as QScreen::geometry(); whereas a
-    \l {QInputDevice::DeviceType}{Mouse} can probably access all screens
-    on the virtual desktop. A Wacom graphics tablet may be configured in a way
-    that it's mapped to all screens, or only to the screen where the user
-    prefers to create drawings, or to the window in which drawing occurs.
+    For example, a \l {QInputDevice::DeviceType}{TouchScreen} input
+    device is fixed in place upon a single physical screen and usually
+    calibrated so that this area is the same as QScreen::geometry(), whereas
+    a \l {QInputDevice::DeviceType}{Mouse} is typically able to access all
+    screens on the virtual desktop.
+
+    Alternatively, a Wacom graphics tablet may be configured so that it is
+    mapped to all screens, or only to the screen where the user prefers to
+    create drawings, or only to the window in which drawing occurs.
+
     A \l {QInputDevice::DeviceType}{Stylus} device that is integrated
     with a touchscreen may be physically limited to that screen.
 
